RASS-1735-fixing template

--- a/server/views/pages/courtAppearance/received-custodial-sentence.njk
+++ b/server/views/pages/courtAppearance/received-custodial-sentence.njk
@@ -1,10 +1,11 @@
-{% extends "../../partials/goToCourtHearingLayout.njk" %}
+{% extends "../../partials/goToCourtCaseLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - received sentence page" %}
 {% block content %}
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-received-custodial-sentence" autocomplete="off">
