Rass 1735 navigation updates cancel option (#1257)
* RASS-1735-error message brought back on top

* RASS-1735-Back button brought back

* RASS-1735-Confirm cancel page implemented, hearing deletion success message bug fixed, Go to court hearing link removed from edit journey

* RASS-1735-Cancel button inserted in Remand journey

* RASS-1735-Cancel button inserted in Sentence journey

* RASS-1735-Cancel button inserted in Remand to Sentencing

* RASS-1735-small refactoring and cancel button added to some more pages

* RASS-1735-small refactoring and tests

* RASS-1735-header updated based on journey

* RASS-1735-go to court case url removed

* RASS-1735-fixing template

* RASS-1735-small refactoring

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% set isNonSentencingWarrant = courtAppearance.warrantType == 'NON_SENTENCING'%}
 {% set warrantOrHearing = 'Warrant' if courtAppearance.warrantType === 'SENTENCING' else 'Hearing' %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set checkAnswersRows = [] %}
 
@@ -113,10 +114,13 @@
 
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-answers" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {{ govukButton({
-                    text: "Confirm and continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                                {{ govukButton({
+                                    text: "Confirm and continue",
+                                    attributes: {  'data-qa': 'continue-button' }
+                                }) }}
+                                {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                </div>
             </form>
         </div>
     </div>
