RASS-1764 update support email in footer

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -69,6 +69,10 @@
 
   {{ footer({
     environment: environment,
+    support: {
+      href: 'mailto:courtcasesandreleasedates@justice.gov.uk',
+      text: 'courtcasesandreleasedates@justice.gov.uk'
+    },
     attributes: {
       "data-qa": "ccrds-footer"
     }
