radio button text updated

--- a/server/views/pages/courtAppearance/cancel-court-case.njk
+++ b/server/views/pages/courtAppearance/cancel-court-case.njk
@@ -45,7 +45,7 @@
                                         items: [
                                             {
                                                 value: "true",
-                                                text: "Yes, cancel adding a court case"
+                                                text: positiveRadioText
                                             },
                                             {
                                                 value: "false",
