RASS-1787-cancel button won't show for unknown recall sentence journey

--- a/server/views/pages/offence/fine-amount.njk
+++ b/server/views/pages/offence/fine-amount.njk
@@ -32,7 +32,9 @@
                   text: "Continue",
                   attributes: {  'data-qa': 'continue-button' }
               }) }}
-              {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+              {% if showCancelButton or showCancelButton == null %}
+                  {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+              {% endif %}
   </div>
   </form>
 {% endblock %}
