--- a/server/views/pages/offence/offence-conviction-date.njk
+++ b/server/views/pages/offence/offence-conviction-date.njk
@@ -50,7 +50,9 @@
                                 text: "Continue",
                                 attributes: {  'data-qa': 'continue-button' }
                             }) }}
-                            {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                            {% if showCancelButton or showCancelButton == null %}
+                                {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                            {% endif %}
                 </div>
             </form>
 
