--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -98,7 +98,9 @@
                                                     attributes: {  'data-qa': 'continue-button' }
                                                 }) }}
 
-                                                {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                                                {% if showCancelButton or showCancelButton == null %}
+                                                    {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                                                {% endif %}
 
                                                   </div>
                                                               </form>
