--- a/server/views/pages/overallSentencing/alternative-sentence-length.njk
+++ b/server/views/pages/overallSentencing/alternative-sentence-length.njk
@@ -6,8 +6,7 @@
 
 {% set pageTitle = applicationName + " - Add alternative sentence length" %}
 
-{% block content %}
-    {{ super() }}
+{% block hearingContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-alternative-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/overallWarrantInformationCaption.njk" %}
