--- a/server/views/pages/courtAppearance/confirmation.njk
+++ b/server/views/pages/courtAppearance/confirmation.njk
@@ -24,18 +24,23 @@
 
             <div class="govuk-!-margin-top-6">
                 <h2 class="govuk-heading-l">What you can do next</h2>
-                <div class="govuk-body govuk-!-margin-top-6">
-                    
+            
                     {% if showBookASecureMoveLink %}
+                    <div class="govuk-body govuk-!-margin-top-6">
                         <a class="govuk-link govuk-link--no-visited-state" href="{{ bookSecureMoveServiceUrl }}" data-qa="bookASecureMoveLink">
                                 Book a secure move
-                        </a></br>
+                        </a>
+                    </div>
                     {% endif %}
                     {% if showBookAVideoLink %}
+                    <div class="govuk-body govuk-!-margin-top-6">
                         <a class="govuk-link govuk-link--no-visited-state" href="{{ bookVideoLinkServiceUrl }}" data-qa="bookAVideoLinkLink">
                                 Book a video link
-                        </a></br>
+                        </a>
+                    </div>
                     {% endif %}
+
+                    <div class="govuk-body govuk-!-margin-top-6">
                     <span>You can go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
                     <ul class="govuk-list govuk-!-margin-top-2">
                         <li>
