--- a/server/views/pages/referenceData/chargeOutcome/index.njk
+++ b/server/views/pages/referenceData/chargeOutcome/index.njk
@@ -1,5 +1,7 @@
 {% extends "../../../partials/layout.njk" %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
 {% set tableRows = [] %}
 
@@ -29,6 +31,16 @@
 {% endfor %}
 
 {% block content %}
+{% if successMessage %}
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-margin-top-2">
+        {{ govukNotificationBanner({
+                text: successMessage,
+                type: "success"
+            }) }} 
+    </div>
+</div>
+{% endif %}
 <div class="govuk-grid-row">
         <div class="govuk-grid-column-full govuk-!-margin-top-8">
             <div class="govuk-grid-row">
@@ -37,6 +49,13 @@
                     <p class="govuk-body">
                         This page helps you find and review the charge outcome reference data held in Remand and Sentencing.
                     </p>
+                </div>
+                <div class="govuk-grid-column-one-quarter">
+                    {{ govukButton({
+                        text: "Add a charge outcome",
+                        href: '/admin/charge-outcomes/add',
+                        classes: 'govuk-link--no-visited-state'
+                    }) }}
                 </div>
             </div>
             
