--- a/server/views/pages/referenceData/chargeOutcome/add.njk
+++ b/server/views/pages/referenceData/chargeOutcome/add.njk
@@ -122,7 +122,10 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Save and continue"
+                    text: "Save and continue",
+                    attributes: {
+                        'data-qa': 'continue-button'
+                    }
                 }) }}
 
             </form>
