--- a/server/views/pages/referenceData/index.njk
+++ b/server/views/pages/referenceData/index.njk
@@ -10,6 +10,9 @@
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/admin/charge-outcomes">Charge outcomes</a>
                     </li>
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/admin/appearance-outcomes">Appearance outcomes</a>
+                    </li>
                 </ul>
             </p>
         </div>
